GNOME Bugzilla – Bug 657919
Crash in screen panel
Last modified: 2011-09-02 13:47:48 UTC
gnome-control-center crashed right after I clicked on the "Lock screen after..." option menu. Program terminated with signal 11, Segmentation fault.
+ Trace 228307
commit f33080ac1bfaec8e27c7d5315a2148af2ccca5ae Author: Bastien Nocera <hadess@hadess.net> Date: Thu Sep 1 13:53:45 2011 +0100 display: Clean up signal handling when finalized Otherwise we might crash if the display panel was opened and the window focus changes. https://bugzilla.gnome.org/show_bug.cgi?id=657919
*** Bug 658056 has been marked as a duplicate of this bug. ***