display: Clean up signal handling when finalized

Otherwise we might crash if the display panel was opened
and the window focus changes.

https://bugzilla.gnome.org/show_bug.cgi?id=657919